--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,14 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  
+  padding: 8px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  
+  
 }
 
 .profile-image {
@@ -20,6 +28,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height:  48px;
+
 }
 
 .logo {
@@ -27,6 +36,9 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  
+  
+
 }
 
 button {
@@ -34,7 +46,9 @@ button {
   border-radius: 8px;
   background: rebeccapurple;
   color: white;
+  display: flex;
   padding: 8px 24px;
+
 }
 
 a {
@@ -45,4 +59,16 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  flex-direction: row;
+  gap: 16px;
+  
+}
+.left, .right {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+
 }
